--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "author": "Salesforce",
   "bugs": "https://github.com/salesforcecli/plugin-metadata-hook-demo/issues",
   "dependencies": {
+    "@oclif/config": "^1",
     "@salesforce/command": "^2.2.0",
     "@salesforce/core": "^2.6.0",
-    "salesforce-alm": "^48.20.0",
     "husky": "^4.2.5",
-    "tslib": "^1",
-    "lint-staged": "^10.2.2"
+    "lint-staged": "^10.2.2",
+    "salesforce-alm": "^48.20.0",
+    "tslib": "^1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
@@ -58,7 +59,7 @@
       }
     },
     "hooks": {
-      "postmdapideploy": "./lib/hooks/postmdapideploy/metadataReplace"
+      "postmdapiconvert": "./lib/hooks/postmdapiconvert/metadataReplace"
     }
   },
   "repository": "salesforcecli/plugin-metadata-hook-demo",
