--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@oclif/config": "^1",
     "@salesforce/command": "^2.2.0",
     "@salesforce/core": "^2.6.0",
+    "@types/xml2js": "^0.4.5",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
     "salesforce-alm": "^48.20.0",
-    "tslib": "^1"
+    "tslib": "^1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
@@ -23,6 +25,7 @@
     "mocha": "^5",
     "nyc": "15.0.1",
     "prettier": "1.16.4",
+    "shx": "0.2.2",
     "ts-node": "^8.6.2",
     "tslint": "^6.1.0",
     "typescript": "^3.8.3"
