--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,8 @@
 {
-  "extends": "./node_modules/@salesforce/dev-config/tsconfig",
+  "extends": "./node_modules/@salesforce/dev-config/tsconfig-strict",
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
-    "lib": ["es6", "dom"],
-    "sourceMap": true,
-    "declaration": true,
-    "moduleResolution": "node",
-    "noImplicitAny": true,
-    "outDir": "./lib",
-    "preserveConstEnums": true,
-    "strict": true,
-
-    // We can replace the TS generated snippets with require statements
-    // from the tslib dependency, making our code more efficient
-    "importHelpers": true,
-    "resolveJsonModule": true
-
-    // Commenting composite out since it prevents the debugger from working
-    // if we import metadatainfos.json
-    // "composite": true
+    "rootDir": "./src",
+    "outDir": "./lib"
   },
   "include": ["./src/**/*"]
 }
